[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trackpy"
version = "0.1.5"
description = "Publication-quality genomic track plots via CLI"
authors = [{name = "trackPy"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.scripts]
trackpy = "trackpy.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["trackpy*"]
